force-app/main/default/objects/OrgChartLinker__c/OrgChartLinker__c.object-meta.xml
<CustomObject>
    <label>Org Chart Linker</label>
    <nameField>
        <displayFormat>OCL-{0000000}</displayFormat>
        <label>Org Chart Linker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Chart Linker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>