force-app/main/default/objects/OrgChartLinker__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chart Links</relationshipLabel>
    <relationshipName>OrgChartLinker</relationshipName>
    <type>Lookup</type>
</CustomField>