force-app/main/default/objects/OrgChartLinker__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sources</relationshipLabel>
    <relationshipName>Source</relationshipName>
    <type>Lookup</type>
</CustomField>