force-app/main/default/objects/OrgChartLinker__c/fields/Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Source_Text__c</fullName>
    <label>Source_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>