force-app/main/default/objects/OrgChartLinker__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Target</relationshipName>
    <type>Lookup</type>
</CustomField>