force-app/main/default/objects/OrgChartLinker__c/fields/Target_Text__c.field-meta.xml
<CustomField>
    <fullName>Target_Text__c</fullName>
    <label>Target_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>