force-app/main/default/objects/OrgChartLinker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Source_Text__c</columns>
    <columns>Target__c</columns>
    <columns>Target_Text__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>